5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1668_2972.log
== TEST (2019-04-15 18:43:35) 
-- CODE:
po=float(input("qual sua posicao inicial?")
vel=float(input("qual sua velocidade?"))
tem=float(input("qual o seu tempo de deslocamento?"))
S=So+(v*t)
if (S>=1000):
	print(S)
	print('Sim')
else:
	print(S)
	ptint('Nao')
-- ERROR:
File "XXXX", line 2
    vel=float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:44:08) 
-- CODE:
So=float(input("qual sua posicao inicial?")
v=float(input("qual sua velocidade?"))
t=float(input("qual o seu tempo de deslocamento?"))
S=So+(v*t)
if (S>=1000):
	print(S)
	print('Sim')
else:
	print(S)
	ptint('Nao')
-- ERROR:
File "XXXX", line 2
    v=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:44:55) 
-- CODE:
So=float(input("qual sua posicao inicial?")
v=int(input("qual sua velocidade?"))
t=float(input("qual o seu tempo de deslocamento?"))
S=So+(v*t)
if (S>=1000):
	print(S)
	print('Sim')
else:
	print(S)
	ptint('Nao')
-- ERROR:
File "XXXX", line 2
    v=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:45:45) 
-- CODE:
So=float(input("qual sua posicao inicial?")
v=float(input("qual sua velocidade?"))
t=float(input("qual o seu tempo de deslocamento?"))
S=So+(v*t)
if (S>=1000):
	print(S)
	print('Sim')
else:
	print(S)
	print('Nao')
-- ERROR:
File "XXXX", line 2
    v=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:46:03) 
-- CODE:
So=float(input("qual sua posicao inicial?"))
v=float(input("qual sua velocidade?"))
t=float(input("qual o seu tempo de deslocamento?"))
S=So+(v*t)
if (S>=1000):
	print(S)
	print('Sim')
else:
	print(S)
	print('Nao')
-- OUTPUT:
3002.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:47:09) 
-- CODE:
So=int(input("qual sua posicao inicial?"))
v=int(input("qual sua velocidade?"))
t=int(input("qual o seu tempo de deslocamento?"))
S=So+(v*t)
if (S>=1000):
	print(S)
	print('Sim')
else:
	print(S)
	print('Nao')
-- OUTPUT:
3002
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:47:20) 
-- CODE:
So=int(input("qual sua posicao inicial?"))
v=int(input("qual sua velocidade?"))
t=int(input("qual o seu tempo de deslocamento?"))
S=So+(v*t)
if (S>=1000):
	print(S)
	print('Sim')
else:
	print(S)
	print('Nao')
-- EXECUTION TIME:
0.183432
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
